# ocaml-next

./: .gitignore  README.md  dune-project  flake.nix  next.opam
.github/workflows/: ci.yaml
next/: dune  next.ml  nextFormat.ml  nextFormat.mli  nextList.ml  nextList.mli  nextString.ml  nextString.mli
